2007-10-21  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkIconTheme.t (list_contexts test): Fix test failure.

2007-10-16  Emmanuele Bassi  <ebassi@gnome.org>

	* tools/genkeysyms.pl: Fix the SYNOPSIS example (from Debian
	bug #422223).

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Use BEGIN { require 5.008; } instead of use 5.008;
	so automatic CPAN testers know which perl version we need.

2007-10-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkPaned.t: Use SKIP instead of TODO for the unreliable resize
	verification tests.  TODOs that pass look like failures.

2007-10-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GdkDnd.t: Handle get_selection() returning undef.

	* Makefile.PL: Tell EU::MM to put correct configure_requires and
	no_index information into the generated META.yml file.

2007-10-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/PangoLayout.xs: Fix leak in
	Gtk2::Pango::Layout::get_iter.  (Reported by Quentin Sculo in
	#482795)

2007-09-24	kaffeetisch

	* Makefile.PL: Prettify build output by summarizing what is done
	instead of printing executed command lines.

	* tools/genkeysyms.pl
	* tools/podifyenums.pl: Don't put timestamps into generated files
	so they don't get installed every single time even though there
	are no real changes.

2007-09-16	kaffeetisch

	* Gtk2.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.160.

2007-09-16	kaffeetisch

	* t/GtkIconView.t: Fix a test failure.

2007-09-15	kaffeetisch

	* t/01.GtkWindow.t
	* t/Gdk.t
	* t/GdkColor.t
	* t/GdkDisplay.t
	* t/GdkEvent.t
	* t/GdkKeys.t
	* t/GdkPango.t
	* t/GdkPixbuf.t
	* t/GdkWindow.t
	* t/GdkX11.t
	* t/GtkAboutDialog.t
	* t/GtkAction.t
	* t/GtkCellLayout.t
	* t/GtkEntry.t
	* t/GtkEntryCompletion.t
	* t/GtkIconTheme.t
	* t/GtkIconView.t
	* t/GtkMenuItem.t
	* t/GtkMenuToolButton.t
	* t/GtkPageSetup.t
	* t/GtkPaperSize.t
	* t/GtkPrintSettings.t
	* t/GtkRange.t
	* t/GtkStatusIcon.t
	* t/GtkTextBuffer.t
	* t/GtkTextMark.t
	* t/GtkToolItem.t